--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -61,6 +61,17 @@
                         <span class="popuptext" id="direccionn">Seleccione la lista  de Direcciones. dando Clic en la lista.!</span>
                     </div>
             </div>
+                 <div class="form-group">
+                        <label class="col-sm-5 control-label">Tema de Capacitación:</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" size="50" maxlength="50" required="true" placeholder=""  th:field="*{temacapacitacion}"/>
+                        </div>
+                        <div class="popup col-sm-1"><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('tema')" onmouseout ="javascript:ocultarAyuda('tema')">a</a></b>
+                        
+                        <span class="popuptext" id="tema">Ingrese un tema de interes como necesidad. Solo se permiten 50 caracteres.!</span>
+                    </div>
+                    </div>
                       <div class="form-group">
                         <label class="col-sm-5 control-label">Necesidad de capacitación que tendra:</label>
                         <div class="col-sm-5">
