--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
@@ -34,12 +34,17 @@
                         </div>
                         
                         <div class="form-group">
+                            <label class="col-sm-5 control-label">Tema de Capacitación:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${diagnosticocapacitacion.temacapacitacion}">DUI</p>
+                            </div>
+                        </div>
+                           <div class="form-group">
                             <label class="col-sm-5 control-label">Nombre dirección  de la necesidad de la capacitacion:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.direccion}">DUI</p>
                             </div>
                         </div>
-                        
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Necesidad de capacitación:</label>
                             <div class="col-sm-7">
