--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_abogados.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_abogados.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="10" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="47"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -16,7 +16,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select  e.codigoempleado, concat(e.nombreempleado,e.apellidoempleado)as Empleado,DATE_FORMAT(e.fechaingresoministerio, '%d/%m/%Y') AS Fecha, fa.centroeducativo, e.duiempleado from empleado e
+		<![CDATA[select  e.codigoempleado, concat(e.nombreempleado,"  ",e.apellidoempleado)as Empleado,DATE_FORMAT(e.fechaingresoministerio, '%d/%m/%Y') AS Fecha, fa.centroeducativo, e.duiempleado from empleado e
 inner join empleadoformacion f on e.codigoempleado=f.codigoempleado
 inner join formacionacademica fa on  fa.codigoformacionacademica=f.codigoformacionacademica
 inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '%abogado' and e.fechaingresoministerio >= STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
@@ -26,9 +26,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') and fa.est
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="Empleado" class="java.lang.String"/>
-	<field name="Fecha" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
+	<field name="Fecha" class="java.lang.String"/>
 	<field name="centroeducativo" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -184,7 +182,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') and fa.est
 			</staticText>
 			<staticText>
 				<reportElement x="607" y="0" width="99" height="14" uuid="5f6e7b56-d32d-41ee-8c48-3da2659baf94"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de aprobación]]></text>
@@ -197,7 +195,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') and fa.est
 			</line>
 			<staticText>
 				<reportElement x="138" y="0" width="150" height="14" uuid="8a01ccdf-3e10-45d7-9ecd-5076a09bf507"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
@@ -209,15 +207,15 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') and fa.est
 				<reportElement x="608" y="0" width="1" height="14" uuid="bbd70896-f704-4df2-9c0b-362d7162dd92"/>
 			</line>
 			<staticText>
-				<reportElement x="320" y="0" width="145" height="14" uuid="6f7bbe2e-e9e2-4a40-a059-381bfc0190c0"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<reportElement x="311" y="0" width="154" height="14" uuid="6f7bbe2e-e9e2-4a40-a059-381bfc0190c0"/>
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Universidad]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="538" y="0" width="69" height="14" uuid="c4f3a5f7-1139-48bf-8b82-e4c0ce2d041a"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[DUI]]></text>
@@ -242,20 +240,20 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') and fa.est
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="540" y="0" width="64" height="14" uuid="b9024f6a-3663-4f30-bd90-54799ad34e74"/>
-				<textElement textAlignment="Right">
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{duiempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="619" y="0" width="58" height="14" uuid="3452d97d-24b8-4e8d-9e8e-9ddf9bb43ca5"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="619" y="0" width="83" height="14" uuid="3452d97d-24b8-4e8d-9e8e-9ddf9bb43ca5"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Fecha}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="54" y="0" width="62" height="14" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="48" y="0" width="89" height="14" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
